# panw-airs-lab-runtime-ollama

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml.exemple  docker-compose.apple.yaml  docker-compose.win.yaml  docker-compose.yaml
.github/workflows/: docker-publish-multi-platform.yml  docker-publish.yml
docker/: .env.example  README.md  docker-compose.apple.yaml  docker-compose.win.yaml  docker-compose.yaml  ollama-entrypoint.sh
src/: config.rs  main.rs  ollama.rs  security.rs  stream.rs  types.rs
src/handlers/: chat.rs  embeddings.rs  generate.rs  mod.rs  models.rs  security_utils.rs  utils.rs  version.rs
