[package]
name = "panw-api-ollama"
version = "0.14.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "net", "signal", "macros", "time"] }
tower-http = { version = "0.6.6", features = ["trace"] }
reqwest = { version = "0.12.23", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.114"
serde_yml = "0.0.12"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
futures-util = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
thiserror = "1.0.57"
bytes = "1.10.1"
async-stream = "0.3.5"
http-body-util = "0.1.3"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
pin-project = "1.1.3"